- Fixed a bug that caused the app to crash when arabic characters were used
- Minor UI bug fix

04/26/2018 > Prime Number Finder version 1.3.2
- Fixed a bug that sometimes caused paused tasks to resume when switching activities.
- Added setting to allow collection of anonymous crash logs

04/28/2018 > Prime Number Finder version 1.3.3
- Fixed a bug that sometimes caused the app to crash after inputting numbers while "infinity" was displayed in the text box.

05/08/2018 > Prime Number Finder version 1.3.4
- UI improvements
- Improved support for other locales
- Stability improvements
- Minor performance improvements
- Bug fixes

05/15/2018 > Prime Number Finder version 1.3.5
- You can now save tasks directly from the task list
- Minor UI improvements
- Bug fixes

05/20/2018 > Prime Number Finder version 1.3.6
- Fixed a bug that would sometimes cause the app to crash when using certain languages
- Minor UI improvements
- Bug fixes

05/22/2018 > Prime Number Finder version 1.3.7
- Fixed a bug that sometimes caused the app to crash when saving a task
- Fixed a bug that caused the app to go unresponsive if it was repeatedly put in the background

07/16/2018 > Prime Number Finder version 1.3.8
- Fixed a bug that sometimes caused the app to crash when saving a task
- Saved files can now be sorted by date, file size, etc.
- Minor UI improvements
- Minor bug fixes

10/15/2018 > Prime Number Finder version 1.3.9
- Added least common multiple finder
- Added greatest common factor finder
- Added dark theme
- Added Quick Copy feature
- UI improvements
- Bug fixes

03/11/2019 > Prime Number Finder version 1.4.0
- Now uses native code for significant performance improvements
- Minor UI changes
- Various performance improvements
- Bug fixes

03/11/2019 > Prime Number Finder version 1.4.1
- Fixed major crashing issue with native code on older devices
- Minor bug fixes
- Minor UI changes

04/0?/2019 > Prime Number Finder version 1.4.2
- Bug fixes