@@ -1,12 +1,10 @@
 package com.tycho.app.primenumberfinder.modules.primefactorization.fragments;
 
 import android.content.Context;
-import android.graphics.Color;
 import android.graphics.Typeface;
 import android.os.Bundle;
 import android.support.annotation.NonNull;
 import android.support.annotation.Nullable;
-import android.support.v4.content.ContextCompat;
 import android.text.SpannableStringBuilder;
 import android.text.Spanned;
 import android.text.style.ForegroundColorSpan;
@@ -151,14 +149,7 @@ public class PrimeFactorizationResultsFragment extends ResultsFragment {
         treeView.setVisibility(View.VISIBLE);
         treeView.setTree(getTask().getFactorTree().formatNumbers());
         if (PreferenceManager.getInt(PreferenceManager.Preference.THEME) == 1){
-            final TreeView.ExportOptions exportOptions = treeView.getDefaultExportOptions();
-            exportOptions.itemTextColor = Color.WHITE;
-            exportOptions.itemBorderColor = ContextCompat.getColor(getContext(), R.color.accent_light_but_not_that_light);
-            exportOptions.branchColor = Color.WHITE;
-            exportOptions.itemBackgroundColor = Color.BLACK;
-            exportOptions.imageBorderColor = Color.WHITE;
-            exportOptions.primeFactorTextColor = ContextCompat.getColor(getContext(), R.color.red);
-            treeView.setExportOptions(exportOptions);
+            treeView.setExportOptions(new TreeView.DarkThemeExportOptions());
         }
 
         centerView.setVisibility(View.GONE);
